force-app/main/default/objects/Lead/fields/X6_Intro_Call_Held_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X6_Intro_Call_Held_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Lead, Lead Status changed to &quot;6-Intro Call Held&quot;.</description>
    <inlineHelpText>Created for reporting purposes. Date Lead, Lead Status changed to &quot;6-Intro Call Held&quot;.</inlineHelpText>
    <label>6-Intro Call Held Status In</label>
    <type>DateTime</type>
</CustomField>