force-app/main/default/objects/Lead/fields/X6_Intro_Call_Held_Status_Out__c.field-meta.xml
<CustomField>
    <fullName>X6_Intro_Call_Held_Status_Out__c</fullName>
    <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;6-Intro Call Held&quot;.</description>
    <inlineHelpText>Date Lead, Lead Status moved out of &quot;6-Intro Call Held&quot;.</inlineHelpText>
    <label>6-Intro Call Held Status Out</label>
    <type>DateTime</type>
</CustomField>