force-app/main/default/objects/Lead/fields/ZI_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_ID__c</fullName>
    <description>Internal ID Number of the Matching ZoomInfo Company Profile.</description>
    <label>ZI Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>