force-app/main/default/objects/Lead/fields/ZI_Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>ZI_Last_Verified_Date__c</fullName>
    <description>ZoomInfo Last Verified Date of Employment Details.</description>
    <label>ZI Last Verified Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>