force-app/main/default/objects/Lead/fields/ZoomInfo_Industry__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Industry__c</fullName>
    <description>We use this field to get the Zoominfo industry value which is a mix of primary and sub-industry values from ZoomInfo.</description>
    <label>ZoomInfo Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>