force-app/main/default/objects/Lead/fields/ZoomInfo_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Phone__c</fullName>
    <description>We use this field to overwrite the phone # every time we enrich the record with ZoomInfo.</description>
    <label>ZoomInfo Phone</label>
    <type>Phone</type>
</CustomField>