force-app/main/default/objects/Lead/fields/ZoomInfo_State__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_State__c</fullName>
    <description>We use this field to get the State from Zoominfo as text since we have State as picklist values and CRM State values are always matching with ZoomInfo State values.</description>
    <label>ZoomInfo State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>