force-app/main/default/objects/Lead/validationRules/If_Competitor_is_Others_Specify_it.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Competitor_is_Others_Specify_it</fullName>
    <active>true</active>
    <errorConditionFormula>IF(INCLUDES(Competitor__c,&quot;Others&quot;),Other_Competitors__c==null,false)</errorConditionFormula>
    <errorDisplayField>Other_Competitors__c</errorDisplayField>
    <errorMessage>Other_Competitors__c field cannot be left blank</errorMessage>
</ValidationRule>