force-app/main/default/objects/Lead/listViews/A_B_Test_Leads_for_SDRs.listView-meta.xml
<ListView>
    <fullName>A_B_Test_Leads_for_SDRs</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Current_Sequence_Name__c</columns>
    <columns>Current_Sequence_Status__c</columns>
    <columns>Current_Sequence_User_Name__c</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__conversion_object_name__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>#A/B Test Leads for SDRs</label>
    <sharedTo>
        <group>A_B_Test_Group</group>
    </sharedTo>
</ListView>