force-app/main/default/objects/Lead/listViews/Bad_Phone_Leads_to_Enrich.listView-meta.xml
<ListView>
    <fullName>Bad_Phone_Leads_to_Enrich</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Lost_Reason__c</columns>
    <columns>Call_Disposition__c</columns>
    <columns>MA_Review_Date__c</columns>
    <columns>SDR_Notes__c</columns>
    <columns>MA_Notes__c</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>algnlta__Matched_Account__c</columns>
    <columns>Matched_Account_Account_Type__c</columns>
    <columns>Matched_Account_Status__c</columns>
    <columns>Matched_Account_Owner__c</columns>
    <columns>Matched_Account_SDR__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lost_Reason__c</field>
        <operation>equals</operation>
        <value>Bad Email &amp; Bad Phone,Bad Phone</value>
    </filters>
    <filters>
        <field>Call_Disposition__c</field>
        <operation>contains</operation>
        <value>Bad Phone,Bad Mobile,No Number Present</value>
    </filters>
    <label># Bad Phone Leads to Enrich</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
        <role>VP_of_Sales</role>
    </sharedTo>
</ListView>