force-app/main/default/objects/Lead/listViews/Cold_Inbound_Queue.listView-meta.xml
<ListView>
    <fullName>Cold_Inbound_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__conversion_object_name__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>startsWith</operation>
        <value>Inactive,Inbound</value>
    </filters>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Cold,Not Ready</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>1-Lead,2-Subscriber,3-Prospect</value>
    </filters>
    <label>#Cold Inbound Queue</label>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>