force-app/main/default/objects/Lead/listViews/CPQ_Pre_Launch_popup.listView-meta.xml
<ListView>
    <fullName>CPQ_Pre_Launch_popup</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Lost_Reason__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Integration__c</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>Current_Sequence_Name__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Sequence_Name__c</field>
        <operation>equals</operation>
        <value>,None</value>
    </filters>
    <label>#CPQ Pre-Launch popup</label>
    <language>en_US</language>
    <sharedTo>
        <role>General_and_Administrative</role>
        <role>Inbound_SDR</role>
        <role>Marketing_Manager</role>
    </sharedTo>
</ListView>