force-app/main/default/objects/Lead/listViews/Event_Lead_Asisgnment.listView-meta.xml
<ListView>
    <fullName>Event_Lead_Asisgnment</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>#Event Lead Asisgnment</label>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>