force-app/main/default/objects/Lead/listViews/Inactive_Lead_Owner_Hot_Warm_Leads.listView-meta.xml
<ListView>
    <fullName>Inactive_Lead_Owner_Hot_Warm_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__conversion_object_name__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_Status__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot,Warm</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Inbound Queue</value>
    </filters>
    <label>#Inactive Lead Owner Hot&amp;Warm Leads</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>