force-app/main/default/objects/Lead/listViews/Inbound_Queue.listView-meta.xml
<ListView>
    <fullName>Inbound_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__conversion_object_name__c</columns>
    <columns>pi__last_activity__c</columns>
    <columns>pi__created_date__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>startsWith</operation>
        <value>Inactive,Inbound</value>
    </filters>
    <label>#Inbound Queue</label>
    <sharedTo>
        <role>Marketing_Manager</role>
    </sharedTo>
</ListView>