force-app/main/default/objects/Lead/listViews/Inbound_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Inbound_Queue_Lead</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__conversion_object_name__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>startsWith</operation>
        <value>Inactive,Inbound</value>
    </filters>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>4-MQL,5-Intro Call Scheduled,6-Intro Call Held</value>
    </filters>
    <label>#Hot Inbound Queue</label>
    <sharedTo>
        <group>Queue_Manager</group>
        <role>VP_of_Strategic_Marketing</role>
    </sharedTo>
</ListView>