force-app/main/default/objects/Lead/listViews/LeadsToDelete.listView-meta.xml
<ListView>
    <fullName>LeadsToDelete</fullName>
    <columns>MA_Notes__c</columns>
    <columns>MA_Review_Date__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Type__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Lost_Reason__c</columns>
    <columns>LEAD.DO_NOT_CALL</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>pi__score__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delete_From_CRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>#LeadsToDelete</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>