force-app/main/default/objects/Lead/listViews/Partner_Team_Lead.listView-meta.xml
<ListView>
    <fullName>Partner_Team_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>#Partner Team Queue</label>
    <queue>Partner_Team_Queue</queue>
    <sharedTo>
        <group>Queue_Manager</group>
        <role>VP_of_Strategic_Marketing</role>
    </sharedTo>
</ListView>